# inky-image-display

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  pytest.toml  release-please-config.json  ruff.toml
.devcontainer/: compose.yml  devcontainer-lock.json  devcontainer.json
.devcontainer/config/: garage.toml  mosquitto.conf
.github/workflows/: container-build-pr.yml  container-build-push.yml  helm-release.yml  python_code_quality.yml  release-please.yml  release-to-pypi.yml
charts/inky-image-display/: .helmignore  Chart.yaml  README.md  values.yaml
charts/inky-image-display/templates/: NOTES.txt  _helpers.tpl  cronjob-display.yaml  cronjob-gemini.yaml  cronjob-immich.yaml  deployment-worker.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
docs/: auth.md  configuration.md  deployment-requirements.md  grids.md  main.md  motd.md  refresh-issues.md  ui.md
integration/: __init__.py
integration/playwright/: README.md  ui_flow.js
scripts/: analyze_album.py  e2e_grid.py
