[project]
name = "inky-image-display-workspace"
version = "0.2.0"
description = "Workspace root for Inky Image Display services."
authors = [
    { name = "stkr22", email = "stkr22@github.com" }
]
license = "GPL-3.0-only"
requires-python = ">=3.12,<3.14"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ruff~=0.15.10",
    "ty~=0.0.31",
    "pytest~=9.0.3",
    "pytest-cov~=7.1.0",
    "pytest-asyncio~=1.3.0",
    "aiosqlite~=0.22.1",
    "pillow~=12.2.0",
]

[tool.ty.rules]
possibly-unresolved-reference = "warn"
unused-ignore-comment = "warn"
