[project]
name = "inky-image-display-workspace"
version = "5.14.0"
description = "Workspace root for Inky Image Display services."
authors = [
    { name = "stkr22", email = "stkr22@github.com" }
]
license = "GPL-3.0-only"
requires-python = ">=3.13,<3.15"

[tool.uv.workspace]
members = ["packages/*"]
# packages/web is the React frontend (npm), not a Python workspace member.
exclude = ["packages/web"]

# CVE-2026-45409 affects idna < 3.15. Pin via override because idna only
# enters the dependency tree transitively (httpx/requests/anyio).
[tool.uv]
override-dependencies = ["idna>=3.15"]

[dependency-groups]
dev = [
    "ruff~=0.15.17",
    "ty~=0.0.49",
    "pytest~=9.0.3",
    "pytest-cov~=7.1.0",
    "pytest-asyncio~=1.3.0",
    "pytest-timeout~=2.3.1",
    "aiosqlite~=0.22.1",
    "pillow~=12.2.0",
]

[tool.ty.rules]
possibly-unresolved-reference = "warn"
unused-ignore-comment = "warn"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = [
    "packages/shared/tests",
    "packages/skill/tests",
    "packages/sync/tests",
    "packages/controller/tests",
    "packages/api/tests",
    "integration",
]
markers = [
    "integration: marks tests as integration tests requiring external services (PostgreSQL, MQTT)",
]
asyncio_mode = "auto"
timeout = "30"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "W",    # pycodestyle warnings (complement to E)
    "Q",    # flake8-quotes (enforce consistent quote style)
    "TID",  # flake8-tidy-imports (better import practices)
    "ICN",  # flake8-import-conventions (e.g., import pandas as pd)
    "PIE",  # flake8-pie (misc linting improvements)
    "ERA",  # eradicate
    "PL",   # pylint
    "RUF",  # ruff-specific rules
    "TC",   # flake8-type-checking
    "ASYNC",  # flake8-async (async/await best practices)
    "FAST", # FastAPI-specific rules
    "D",    # pydocstyle (docstring conventions)
]
ignore = [
    "E203",
    "D203",  # Incompatible with D211 (no-blank-line-before-class)
    "D213",  # Incompatible with D212 (multi-line-summary-first-line)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "PLR2004", "D", "ARG002", "ASYNC240"]
"packages/*/tests/**/*.py" = ["S101", "PLR2004", "D", "ARG002", "ASYNC240"]
"scripts/**/*.py" = ["T201", "D", "PLR2004", "PLR0913", "PLW2901", "PTH123", "BLE001"]
"**/migrations/*.py" = ["E501"]
"**/routes/*.py" = ["PLR0913"]
